Changed name of files from 'InteractiveHistApp' to 'Interactive3dHist'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.11)
 
 #---------------------------------------------------------
 #   Define the project 
-project(3dInteractiveHist VERSION 0.1
+project(Interactive3dHist VERSION 0.1
         LANGUAGES CXX)  
 
 #---------------------------------------------------------
@@ -28,19 +28,19 @@ find_package(ROOT 6.20 REQUIRED COMPONENTS
 #---------------------------------------------------------
 #   Define sources and headers
 set(sources 
-    InteractiveHistApp.cxx
+    Interactive3dHist.cxx
 )
 
 set(headers 
-    InteractiveHistApp.hxx
+    Interactive3dHist.hxx
 )
 
 #---------------------------------------------------------
 #   Generate the ROOT dictionary
-root_generate_dictionary(G__3dInteractiveHist ${headers} LINKDEF LinkDef.hxx)
+root_generate_dictionary(G__Interactive3dHist ${headers} LINKDEF LinkDef.hxx)
 
 #---------------------------------------------------------
 #   Add Libraries
-add_library(3dInteractiveHist SHARED ${headers} ${sources} G__3dInteractiveHist.cxx)
-target_include_directories(3dInteractiveHist PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(3dInteractiveHist PUBLIC ROOT::Core)
+add_library(Interactive3dHist SHARED ${headers} ${sources} G__Interactive3dHist.cxx)
+target_include_directories(Interactive3dHist PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+target_link_libraries(Interactive3dHist PUBLIC ROOT::Core)
